# workshop-management-system

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  data.py  database.db  home.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7112dd9e9d7b_first_migration.py
tests/: __init__.py  conftest.py  test_customer.py  test_inventory.py  test_jobcard.py  test_service.py  test_supplier.py  test_vehicle.py
workshop_management_system/: __init__.py  home.py
workshop_management_system/complaint/: model.py
workshop_management_system/core/: __init__.py  config.py  load_models.py
workshop_management_system/database/: __init__.py  connection.py  init_database.py  session.py
workshop_management_system/estimate/: model.py
workshop_management_system/inventory/: model.py
workshop_management_system/jobcard/: model.py
workshop_management_system/notification/: __init__.py  model.py
workshop_management_system/payment/: model.py
workshop_management_system/service/: model.py
workshop_management_system/serviceitem/: model.py
workshop_management_system/stocktransaction/: model.py
workshop_management_system/supplier/: model.py
workshop_management_system/user/: model.py
workshop_management_system/v1/: __init__.py
workshop_management_system/v1/base/: __init__.py  gui.py  model.py  view.py
workshop_management_system/v1/complaint/: __init__.py  crud.py  gui.py  model.py  view.py
workshop_management_system/v1/customer/: __init__.py  crud.py  gui.py  guis.py  model.py  view.py
workshop_management_system/v1/digital_signature/: __init__.py  model.py  view.py
workshop_management_system/v1/employee/: __init__.py  crud.py  gui.py  model.py  view.py
workshop_management_system/v1/estimate/: __init__.py  crud.py  gui.py  model.py  view.py
workshop_management_system/v1/feedback/: __init__.py  gui.py  model.py  view.py
workshop_management_system/v1/inventory/: __init__.py  association.py  crud.py  gui.py  model.py  view.py
workshop_management_system/v1/inventory_jobcard_link/: __init__.py  model.py
workshop_management_system/v1/inventory_service_link/: __init__.py  model.py
workshop_management_system/v1/inventory_supplier_link/: __init__.py  model.py
workshop_management_system/v1/jobcard/: __init__.py  crud.py  gui.py  model.py  view.py
workshop_management_system/v1/notification/: __init__.py  crud.py  gui.py  model.py  view.py
workshop_management_system/v1/payment/: __init__.py  crud.py  gui.py  model.py  view.py
workshop_management_system/v1/service/: __init__.py  gui.py  model.py  view.py
workshop_management_system/v1/service_item/: __init__.py  gui.py  model.py  view.py
workshop_management_system/v1/stock_transaction/: __init__.py  gui.py  model.py  view.py
workshop_management_system/v1/supplier/: __init__.py  crud.py  gui.py  model.py  sample_data.py  view.py
workshop_management_system/v1/utils/: pdf_generator.py
workshop_management_system/v1/vehicle/: __init__.py  gui.py  model.py  view.py
